add transport's icone

--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -100,30 +100,30 @@
         ></iframe>
         <div class="transport">
           <div>
-            <p class="paragraphe">
+            <p class="paragraphe transport-icone">
+              <i class="fa-solid fa-car"></i>
               Autoroute A43 en direction de Turin (Tunnel du Fréjus, Italie),
               sortie n°30 – Modane, Haute Maurienne, puis route départementale
               1006 (ex-RN6). Traversez Modane et continuer en direction de Val
               Cenis. Val Cenis est à 23 km.
             </p>
-            <!-- icone transport -->
           </div>
           <div>
-            <p class="paragraphe">
+            <p class="paragraphe transport-icone">
+              <i class="fa-solid fa-train"></i>
               A moins de 4 heures de Paris en TGV, la SNCF propose des liaisons
               régulières pour Modane. Pour rejoindre la station, la gare
               routière est à votre gauche en sortant de la Gare SNCF de Modane.
             </p>
-            <!-- icone transport -->
           </div>
           <div>
-            <p class="paragraphe">
+            <p class="paragraphe transport-icone">
+              <i class="fa-solid fa-plane"></i>
               Les aéroports de Chambéry, Grenoble, Genève, Lyon et Turin sont à
               moins de deux heures de route de nos stations. En période d’hiver
               uniquement, il existe des liaisons en bus depuis les aéroports de
               Lyon Saint-Exupéry, Chambéry et Genève.
             </p>
-            <!-- icone transport -->
           </div>
         </div>
       </div>
