change breakpoint, fix icone href

--- a/accueil.html
+++ b/accueil.html
@@ -89,9 +89,9 @@
         <i class="fa-solid fa-person-skiing"></i>
       </div>
       <div class="icone">
-        <i class="fa-brands fa-facebook fa-2x"></i>
-        <i class="fa-brands fa-instagram fa-2x"><a href="#"></a></i>
-        <i class="fa-brands fa-twitter fa-2x"><a href="#"></a></i>
+        <a href="https://www.facebook.com/valcenis.officiel/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+        <a href="https://www.instagram.com/valcenis_officiel/?hl=fr" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+        <a href="https://twitter.com/val_cenis" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
       </div>
       <div class="icone right">
         <i class="fa-solid fa-person-skiing"></i>
