add ancre activités

--- a/activites.html
+++ b/activites.html
@@ -42,7 +42,11 @@
     <main>
       <div class="main-container">
         <section class="first-container">
-          <h2>
+          <div class="choice">
+            <h2 class="title-choice"><a href="#ete">voir l'été</a></h2>
+            <h2 class="title-choice"><a href="#hiver">voir l'hiver</a></h2>
+          </div>
+          <h2 id="ete">
             été
             <i class="fa-solid fa-mountain-sun"></i>
           </h2>
@@ -80,7 +84,7 @@
           </div>
         </section>
         <section class="second-container">
-          <h2>
+          <h2 id="hiver">
             hiver
             <i class="fa-regular fa-snowflake"></i>
           </h2>
