change bg-c ancre

--- a/activites.html
+++ b/activites.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <img src="assets/carousel/carousel_2.jpg"  alt="">
+      <img src="assets/carousel/carousel_2.jpg" alt="" />
       <nav>
         <div class="dark-mode">
           <div class="btn"></div>
@@ -140,7 +140,6 @@
         <i class="fa-solid fa-tree"></i>
         <i class="fa-solid fa-person-hiking"></i>
       </div>
-
     </footer>
 
     <script src="javascript.js"></script>
