--- a/accueil.html
+++ b/accueil.html
@@ -14,30 +14,33 @@
   </head>
   <body>
     <header>
-      <img src="assets/carousel/carousel_3.jpg"  alt="">
-        <nav>
-          <div class="dark-mode">
-            <div class="btn"></div>
-            <i class="fas fa-moon"></i>
-            <i class="fa-solid fa-sun"></i>
-          </div>
-          <button
-            type="button"
-            aria-label="toggle navigation"
-            class="nav-toggler"
-          >
-            <span class="line l1"></span>
-            <span class="line l2"></span>
-            <span class="line l3"></span>
-          </button>
-        </nav>
-        <ul class="nav-bar-mobil">
-          <li><a href="accueil.html">accueil</a></li>
-          <li><a href="activites.html">activités</a></li>
-          <li><a href="infos-utiles.html">infos utiles</a></li>
-          <li><a href="alentours.html">aux alentours</a></li>
-        </ul>
-        <h1>val cenis</h1>
+      <img
+        src="assets/carousel/carousel_3.jpg"
+        alt="Photo d'un cycliste à la montagne"
+      />
+      <nav>
+        <div class="dark-mode">
+          <div class="btn"></div>
+          <i class="fas fa-moon"></i>
+          <i class="fa-solid fa-sun"></i>
+        </div>
+        <button
+          type="button"
+          aria-label="toggle navigation"
+          class="nav-toggler"
+        >
+          <span class="line l1"></span>
+          <span class="line l2"></span>
+          <span class="line l3"></span>
+        </button>
+      </nav>
+      <ul class="nav-bar-mobil">
+        <li><a href="accueil.html">accueil</a></li>
+        <li><a href="activites.html">activités</a></li>
+        <li><a href="infos-utiles.html">infos utiles</a></li>
+        <li><a href="alentours.html">aux alentours</a></li>
+      </ul>
+      <h1>val cenis</h1>
     </header>
     <main>
       <section class="flex-container">
@@ -70,7 +73,11 @@
           </p>
         </div>
         <div>
-          <img class="img-shadow" src="assets/val-cenis-3.jpeg" alt="" />
+          <img
+            class="img-shadow"
+            src="assets/val-cenis-3.jpeg"
+            alt="Photo de la ville de Val Cenis"
+          />
           <p class="paragraphe">
             Depuis le 1er janvier 2017, Val Cenis n’est plus seulement une
             station de ski mais une commune qui regroupe désormais les anciens
@@ -89,9 +96,17 @@
         <i class="fa-solid fa-person-skiing"></i>
       </div>
       <div class="icone">
-        <a href="https://www.facebook.com/valcenis.officiel/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
-        <a href="https://www.instagram.com/valcenis_officiel/?hl=fr" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
-        <a href="https://twitter.com/val_cenis" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
+        <a href="https://www.facebook.com/valcenis.officiel/" target="_blank"
+          ><i class="fa-brands fa-facebook fa-2x"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/valcenis_officiel/?hl=fr"
+          target="_blank"
+          ><i class="fa-brands fa-instagram fa-2x"></i
+        ></a>
+        <a href="https://twitter.com/val_cenis" target="_blank"
+          ><i class="fa-brands fa-twitter fa-2x"></i
+        ></a>
       </div>
       <div class="icone right">
         <i class="fa-solid fa-person-skiing"></i>
