try to change responsive

--- a/activites.html
+++ b/activites.html
@@ -50,7 +50,7 @@
             été
             <i class="fa-solid fa-mountain-sun"></i>
           </h2>
-          <div>
+          <div class="test">
             <img src="assets/randonnée.jpg" class="img-shadow" alt="" />
             <p class="paragraphe">
               Vous connaissez la montagne l’hiver ? Partez à la découverte de
@@ -60,7 +60,7 @@
               Vanoise la tranquillité et le bien-être.
             </p>
           </div>
-          <div>
+          <div class="test">
             <img src="assets/lac.jpg" class="img-shadow" alt="" />
             <p class="paragraphe">
               Afin de découvrir les eaux claires de nos lacs d’altitude, en
@@ -72,7 +72,7 @@
               nature !
             </p>
           </div>
-          <div>
+          <div class="test">
             <img src="assets/vtt.jpg" class="img-shadow" alt="" />
             <p class="paragraphe">
               En Haute Maurienne Vanoise, vous êtes invités à découvrir et
