responsive activités image superimposed done

--- a/activites.html
+++ b/activites.html
@@ -50,37 +50,40 @@
             été
             <i class="fa-solid fa-mountain-sun"></i>
           </h2>
-          <div class="test">
-            <img src="assets/randonnée.jpg" class="img-shadow" alt="" />
-            <p class="paragraphe">
-              Vous connaissez la montagne l’hiver ? Partez à la découverte de
-              cet environnement l’été et profitez d’une nature préservée pour
-              vous détendre, vous ressourcer. Du Parc National de la Vanoise aux
-              grands espaces frontaliers, vous trouverez en Haute Maurienne
-              Vanoise la tranquillité et le bien-être.
-            </p>
-          </div>
-          <div class="test">
-            <img src="assets/lac.jpg" class="img-shadow" alt="" />
-            <p class="paragraphe">
-              Afin de découvrir les eaux claires de nos lacs d’altitude, en
-              famille, entre amis ou en solo, venez passer une nuit en refuge.
-              Accompagné d’un guide, vous randonnerez en toute sécurité sur des
-              itinéraires balisés et entretenus au pied des glaciers en plein
-              cœur du Parc national de la Vanoise. Silence, air pur, soleil,
-              ciel bleu, marmottes et myrtilles… il n’y a plus que vous et la
-              nature !
-            </p>
-          </div>
-          <div class="test">
-            <img src="assets/vtt.jpg" class="img-shadow" alt="" />
-            <p class="paragraphe">
-              En Haute Maurienne Vanoise, vous êtes invités à découvrir et
-              pratiquer tous les styles de VTT : cross-country, VTT à assistance
-              électrique, VTT classique. Parcours et zones ludiques, en
-              particulier le nouvel espace de Chantelouve vous offre des
-              sensations à la portée de tous les niveaux de pratique.
-            </p>
+          <div class="first-container-main">
+            <div class="desktop-img">
+              <img src="assets/randonnée.jpg" class="img-shadow" alt="" />
+              <p class="paragraphe">
+                Vous connaissez la montagne l’hiver ? Partez à la découverte de
+                cet environnement l’été et profitez d’une nature préservée pour
+                vous détendre, vous ressourcer. Du Parc National de la Vanoise
+                aux grands espaces frontaliers, vous trouverez en Haute
+                Maurienne Vanoise la tranquillité et le bien-être.
+              </p>
+            </div>
+            <div class="desktop-img reverse">
+              <img src="assets/lac.jpg" class="img-shadow" alt="" />
+              <p class="paragraphe">
+                Afin de découvrir les eaux claires de nos lacs d’altitude, en
+                famille, entre amis ou en solo, venez passer une nuit en refuge.
+                Accompagné d’un guide, vous randonnerez en toute sécurité sur
+                des itinéraires balisés et entretenus au pied des glaciers en
+                plein cœur du Parc national de la Vanoise. Silence, air pur,
+                soleil, ciel bleu, marmottes et myrtilles… il n’y a plus que
+                vous et la nature !
+              </p>
+            </div>
+            <div class="desktop-img">
+              <img src="assets/vtt.jpg" class="img-shadow" alt="" />
+              <p class="paragraphe">
+                En Haute Maurienne Vanoise, vous êtes invités à découvrir et
+                pratiquer tous les styles de VTT : cross-country, VTT à
+                assistance électrique, VTT classique. Parcours et zones
+                ludiques, en particulier le nouvel espace de Chantelouve vous
+                offre des sensations à la portée de tous les niveaux de
+                pratique.
+              </p>
+            </div>
           </div>
         </section>
         <section class="second-container">
@@ -88,38 +91,40 @@
             hiver
             <i class="fa-regular fa-snowflake"></i>
           </h2>
-          <div>
-            <img src="assets/autumn.jpg" class="img-shadow" alt="" />
-            <p class="paragraphe">
-              L’automne est une saison flamboyante en Haute Maurienne Vanoise.
-              Le climat est généralement sec, froid et lumineux. Le soleil
-              rasant, les tapis de feuilles multicolores, les odeurs de de pin
-              et d’humus, les mélèzes dorés… A vous d’en profiter !
-            </p>
-          </div>
-          <div>
-            <img src="assets/ski.jpg" class="img-shadow" alt="" />
-            <p class="paragraphe">
-              À la frontière entre France et Italie, la glisse se décline en
-              version grand ski : 1500m de dénivelé répartis sur 125 km de
-              domaine alpin. Grâce à ses remontées mécaniques récentes, ses
-              espaces ludiques et sa vue saisissante sur le lac du Mont-Cenis,
-              le domaine de Val Cenis devient l’hiver un terrain de jeux adapté
-              à toute la famille.
-            </p>
-          </div>
-          <div>
-            <img src="assets/auditorium.jpg" class="img-shadow" alt="" />
-            <p class="paragraphe">
-              Inauguré en octobre 2011 par l’artiste Laurent Gerra, amoureux de
-              Val Cenis et de la Haute Maurienne Vanoise dans sa globalité,
-              l’auditorium est équipé de 437 places, avec un plateau de 180 m²,
-              pouvant accueillir spectacles de variété, programmation
-              artistique, danse et séminaires. Nous vous proposons des
-              spectacles mêlant différentes disciplines artistiques (danse,
-              théâtre, chanson, humour, mime…) sélectionnés et reconnus pour
-              leur qualité.
-            </p>
+          <div class="second-container-main">
+            <div class="desktop-img reverse">
+              <img src="assets/autumn.jpg" class="img-shadow" alt="" />
+              <p class="paragraphe">
+                L’automne est une saison flamboyante en Haute Maurienne Vanoise.
+                Le climat est généralement sec, froid et lumineux. Le soleil
+                rasant, les tapis de feuilles multicolores, les odeurs de de pin
+                et d’humus, les mélèzes dorés… A vous d’en profiter !
+              </p>
+            </div>
+            <div class="desktop-img">
+              <img src="assets/ski.jpg" class="img-shadow" alt="" />
+              <p class="paragraphe">
+                À la frontière entre France et Italie, la glisse se décline en
+                version grand ski : 1500m de dénivelé répartis sur 125 km de
+                domaine alpin. Grâce à ses remontées mécaniques récentes, ses
+                espaces ludiques et sa vue saisissante sur le lac du Mont-Cenis,
+                le domaine de Val Cenis devient l’hiver un terrain de jeux
+                adapté à toute la famille.
+              </p>
+            </div>
+            <div class="desktop-img reverse">
+              <img src="assets/auditorium.jpg" class="img-shadow" alt="" />
+              <p class="paragraphe">
+                Inauguré en octobre 2011 par l’artiste Laurent Gerra, amoureux
+                de Val Cenis et de la Haute Maurienne Vanoise dans sa globalité,
+                l’auditorium est équipé de 437 places, avec un plateau de 180
+                m², pouvant accueillir spectacles de variété, programmation
+                artistique, danse et séminaires. Nous vous proposons des
+                spectacles mêlant différentes disciplines artistiques (danse,
+                théâtre, chanson, humour, mime…) sélectionnés et reconnus pour
+                leur qualité.
+              </p>
+            </div>
           </div>
         </section>
       </div>
