replae accueil to index

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </button>
       </nav>
       <ul class="nav-bar-mobil">
-        <li><a href="accueil.html">accueil</a></li>
+        <li><a href="index.html">accueil</a></li>
         <li><a href="activites.html">activités</a></li>
         <li><a href="infos-utiles.html">infos utiles</a></li>
         <li><a href="alentours.html">aux alentours</a></li>
