--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -14,7 +14,51 @@
   </head>
   <body>
     <header>
-      <img src="assets/carousel/carousel_4.jpg" alt="" />
+                <!-- carousel start -->
+                <div class="slider">
+                  <div class="slides">
+                    <!-- radio button end -->
+                    <input type="radio" name="radio-btn" id="radio1">
+                    <input type="radio" name="radio-btn" id="radio2">
+                    <input type="radio" name="radio-btn" id="radio3">
+                    <input type="radio" name="radio-btn" id="radio4">
+                    <!-- radio button end -->
+                    <!-- Slide image start -->
+                    <div class="slide first">
+                      <img src="assets/carousel/car_1440/carousel_1.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                      <img src="assets/carousel/car_1440/carousel_2.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                      <img src="assets/carousel/car_1440/carousel_3.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                      <img src="assets/carousel/car_1440/carousel_4.jpg" alt="">
+                    </div>
+                    <!-- slide image end -->
+          
+                    <!-- automatic nav start -->
+                    <div class="navigation-auto">
+                      <div class="auto-btn1"></div>
+                      <div class="auto-btn2"></div>
+                      <div class="auto-btn3"></div>
+                      <div class="auto-btn4"></div>
+                    </div>
+                    <!-- automatic nav end -->
+                  </div>
+                  <!-- manual nav start -->
+                  <div class="navigation-manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                  </div>
+                  
+                  <!-- manual nav end -->
+                </div>
+                    <!-- carousel end -->
+      <!-- <img src="assets/carousel/carousel_4.jpg" alt="" /> -->
       <nav>
         <div class="dark-mode">
           <div class="btn"></div>
@@ -32,7 +76,7 @@
         </button>
       </nav>
       <ul class="nav-bar-mobil">
-        <li><a href="accueil.html">accueil</a></li>
+        <li><a href="index.html">accueil</a></li>
         <li><a href="activites.html">activités</a></li>
         <li><a href="infos-utiles.html">infos utiles</a></li>
         <li><a href="alentours.html">aux alentours</a></li>
