--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
   </head>
   <body>
     <header>
-          <!-- carousel start -->
+      <!-- carousel start -->
       <div class="slider">
         <div class="slides">
           <!-- radio button end -->
-          <input type="radio" name="radio-btn" id="radio1">
-          <input type="radio" name="radio-btn" id="radio2">
-          <input type="radio" name="radio-btn" id="radio3">
-          <input type="radio" name="radio-btn" id="radio4">
+          <input type="radio" name="radio-btn" id="radio1" />
+          <input type="radio" name="radio-btn" id="radio2" />
+          <input type="radio" name="radio-btn" id="radio3" />
+          <input type="radio" name="radio-btn" id="radio4" />
           <!-- radio button end -->
           <!-- Slide image start -->
           <div class="slide first">
-            <img src="assets/carousel/car_1440/carousel_1.jpg" alt="">
+            <img src="assets/carousel/car_1440/carousel_1.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="assets/carousel/car_1440/carousel_2.jpg" alt="">
+            <img src="assets/carousel/car_1440/carousel_2.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="assets/carousel/car_1440/carousel_3.jpg" alt="">
+            <img src="assets/carousel/car_1440/carousel_3.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="assets/carousel/car_1440/carousel_4.jpg" alt="">
+            <img src="assets/carousel/car_1440/carousel_4.jpg" alt="" />
           </div>
           <!-- slide image end -->
 
@@ -54,15 +54,15 @@
           <label for="radio3" class="manual-btn"></label>
           <label for="radio4" class="manual-btn"></label>
         </div>
-        
+
         <!-- manual nav end -->
       </div>
-          <!-- carousel end -->
-
-      <!-- <img
+      <!-- carousel end -->
+      <img
         src="assets/carousel/carousel_3.jpg"
         alt="Photo d'un cycliste à la montagne"
-      /> -->
+        class="mobil-picture"
+      />
       <nav>
         <div class="dark-mode">
           <div class="btn"></div>
