second title activites add margin top 5%

--- a/activites.html
+++ b/activites.html
@@ -85,7 +85,7 @@
       <h1>activités</h1>
     </header>
     <main>
-      <div class="main-container">
+      <div class="main-container main-container-desktop">
         <section class="first-container">
           <div class="choice">
             <h2 class="title-choice"><a href="#ete">voir l'été</a></h2>
