change display in alentours desktop

--- a/alentours.html
+++ b/alentours.html
@@ -58,7 +58,7 @@
         <!-- manual nav end -->
       </div>
       <!-- carousel end -->
-      <img src="assets/carousel/carousel_1.jpg" alt="" class="mobil-nav" />
+      <!-- <img src="assets/carousel/carousel_1.jpg" alt="" class="mobil-nav" /> -->
       <nav>
         <div class="dark-mode">
           <div class="btn"></div>
