--- a/activites.html
+++ b/activites.html
@@ -12,30 +12,30 @@
     ></script>
     <title>Projet_1 - Activité</title>
   </head>
-            
+
   <body>
     <header>
       <!-- carousel start -->
       <div class="slider">
         <div class="slides">
           <!-- radio button end -->
-          <input type="radio" name="radio-btn" id="radio1">
-          <input type="radio" name="radio-btn" id="radio2">
-          <input type="radio" name="radio-btn" id="radio3">
-          <input type="radio" name="radio-btn" id="radio4">
+          <input type="radio" name="radio-btn" id="radio1" />
+          <input type="radio" name="radio-btn" id="radio2" />
+          <input type="radio" name="radio-btn" id="radio3" />
+          <input type="radio" name="radio-btn" id="radio4" />
           <!-- radio button end -->
           <!-- Slide image start -->
           <div class="slide first">
-            <img src="assets/carousel/car_1440/carousel_1.jpg" alt="">
+            <img src="assets/carousel/car_1440/carousel_1.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="assets/carousel/car_1440/carousel_2.jpg" alt="">
+            <img src="assets/carousel/car_1440/carousel_2.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="assets/carousel/car_1440/carousel_3.jpg" alt="">
+            <img src="assets/carousel/car_1440/carousel_3.jpg" alt="" />
           </div>
           <div class="slide">
-            <img src="assets/carousel/car_1440/carousel_4.jpg" alt="">
+            <img src="assets/carousel/car_1440/carousel_4.jpg" alt="" />
           </div>
           <!-- slide image end -->
 
@@ -55,10 +55,10 @@
           <label for="radio3" class="manual-btn"></label>
           <label for="radio4" class="manual-btn"></label>
         </div>
-        
+
         <!-- manual nav end -->
       </div>
-          <!-- carousel end -->
+      <!-- carousel end -->
       <nav>
         <div class="dark-mode">
           <div class="btn"></div>
