--- a/alentours-bonneval.html
+++ b/alentours-bonneval.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/3199a382cb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Projet_1 - Aux alentours - Bonneval</title>
+    <title>Val Cenis - Bonneval</title>
   </head>
   <body>
     <header>
