--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/3199a382cb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Projet_1 - Accueil</title>
+    <title>Val Cenis - Accueil</title>
   </head>
   <body>
     <header>
