--- a/infos-utiles.html
+++ b/infos-utiles.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/3199a382cb.js"
       crossorigin="anonymous"
     ></script>
-    <title>Projet_1 - Infos Utiles</title>
+    <title>Val Cenis - Infos Utiles</title>
   </head>
   <body>
     <header>
