--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <p class="paragraphe">
             Val Cenis est une station de montagne à l’altitude parfaite pour
             s’oxygéner et se ressourcer dans un environnement très nature au
-            pied du Col du Mont-Cenis. C’est aussi une destination aux multiples
+            pied du Col du Mont-Cenis. C'est aussi une destination aux multiples
             facettes : familiale et sportive, authentique et innovante,
             reposante et animée, généreuse et sincère.
           </p>
